# rsquery

./: .gitmodules  Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
src/: handle_result.rs  handler.rs  main.rs  model.rs  response.rs
web/: next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js
web/app/: layout.tsx  navbar.tsx  page.tsx
