[package]
name = "rsquery-restapi-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
chrono = { version = "0.4.26", features = ["serde"] }
env_logger = "0.10.0"
serde = { version = "1.0.171", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4"] }
