[package]
name = "rsquery-restapi-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ballista = { path = "../arrow-ballista/ballista/client", version = "0.11.0" }
datafusion = "30.0.0"
actix-cors = "0.6.4"
actix-web = "4.4.0"
chrono = { version = "0.4.26", features = ["serde"] }
env_logger = "0.10.0"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4.1", features = ["v4"] }
utoipa = { version = "3.5.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.1.5", features = ["actix-web"] }
